--- a/useage/useage.ipynb
+++ b/useage/useage.ipynb
@@ -214,6 +214,97 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# ApsisBNOCR"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:root:The installed fastdeploy-python package is not built with GPU, will force to use CPU. To use GPU, following the commands to install fastdeploy-gpu-python.\n",
+      "WARNING:root:    ================= Install GPU FastDeploy===============\n",
+      "WARNING:root:    python -m pip uninstall fastdeploy-python\n",
+      "WARNING:root:    python -m pip install fastdeploy-gpu-python -f https://www.paddlepaddle.org.cn/whl/fastdeploy.html\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m#LOG     :\u001b[0m\u001b[34mLoaded Bangla Model\u001b[0m\n",
+      "[INFO] fastdeploy/runtime/runtime.cc(273)::CreatePaddleBackend\tRuntime initialized with Backend::PDINFER in Device::CPU.\n",
+      "\u001b[32m#LOG     :\u001b[0m\u001b[34mLoaded Paddle detector\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: Logging before InitGoogleLogging() is written to STDERR\n",
+      "W0501 00:56:40.300997 354215 analysis_config.cc:971] It is detected that mkldnn and memory_optimize_pass are enabled at the same time, but they are not supported yet. Currently, memory_optimize_pass is explicitly disabled\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[INFO] fastdeploy/runtime/runtime.cc(273)::CreatePaddleBackend\tRuntime initialized with Backend::PDINFER in Device::CPU.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from apsisocr import ApsisBNOCR\n",
+    "ocr=ApsisBNOCR()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pprint import pprint\n",
+    "res=ocr(\"/home/ansary/WORK/apsis/apsisOCR/useage/images/test.png\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " আমি ওর কথা শুনি না। দুটো লোকাল\n",
+      " ট্রেন ছেড়ে দিই। তখন আলো জ্বলে\n",
+      " গেছে স্টেশনে। দূর থেকে দেখতে\n",
+      " পাওয়া বাড়িগুলোতেও সন্ধের আলো।\n",
+      " আর সত্যিই স্টেশন শুনশান প্রায়।\n",
+      " আমি আর হরিচরণ অপেক্ষা করি।\n",
+      " পালাতে পারি না ওকে। ফেলে। ডাক্তার\n",
+      " আমাকে বলেছিল, আপনি আপনার\n",
+      " ভাইকে খুঁজছেন, সেটা আপনার মনের\n",
+      " ভুল। কিন্তু আমি তো এবার আমার\n",
+      " ভাইকে খুঁজছিলাম না। আমার ভাই-ই\n",
+      " যদি আমাকে খুঁজে নেয় আমি কী করব\n",
+      " বলুন ডাক্তারবাবু!\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(res[\"text\"])"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
