--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -20,3 +20,7 @@ Change Log
 0.0.5 (22/11/2024)
 ------------------
 - added Null handling to apsisbnocr
+
+0.0.6 (22/11/2024)
+------------------
+- added Null handling to apsisbnocr - output typo update
